// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dispute details screen renders correctly for bank_cannot_process dispute 1`] = `
<Page
  className="wcpay-dispute-details"
  isNarrow={true}
>
  <Card
    title={
      <Loadable
        value="Dispute Overview"
      />
    }
  >
    <Info
      dispute={
        Object {
          "amount": 1000,
          "created": 1572590800,
          "evidence_details": Object {
            "due_by": 1573199200,
          },
          "id": "dp_asdfghjkl",
          "order": Object {
            "number": "1",
            "url": "http://test.local/order/1",
          },
          "reason": "bank_cannot_process",
          "status": "needs_response",
        }
      }
    />
    <LoadableBlock
      numLines={4}
    >
      <Paragraphs />
    </LoadableBlock>
    <LoadableBlock
      numLines={6}
    >
      <Actions
        id="dp_asdfghjkl"
        isSubmitted={false}
        needsResponse={true}
      />
    </LoadableBlock>
  </Card>
  <Card
    title={
      <Loadable
        value="Bank Cannot Process Dispute"
      />
    }
  >
    <LoadableBlock
      numLines={4}
    >
      <Paragraphs />
    </LoadableBlock>
    <LoadableBlock
      numLines={6}
    >
      <Paragraphs />
    </LoadableBlock>
    <LoadableBlock
      numLines={6}
    >
      <Paragraphs />
      <Actions
        id="dp_asdfghjkl"
        isSubmitted={false}
        needsResponse={true}
      />
    </LoadableBlock>
  </Card>
</Page>
`;

exports[`Dispute details screen renders correctly for check_returned dispute 1`] = `
<Page
  className="wcpay-dispute-details"
  isNarrow={true}
>
  <Card
    title={
      <Loadable
        value="Dispute Overview"
      />
    }
  >
    <Info
      dispute={
        Object {
          "amount": 1000,
          "created": 1572590800,
          "evidence_details": Object {
            "due_by": 1573199200,
          },
          "id": "dp_asdfghjkl",
          "order": Object {
            "number": "1",
            "url": "http://test.local/order/1",
          },
          "reason": "check_returned",
          "status": "needs_response",
        }
      }
    />
    <LoadableBlock
      numLines={4}
    >
      <Paragraphs />
    </LoadableBlock>
    <LoadableBlock
      numLines={6}
    >
      <Actions
        id="dp_asdfghjkl"
        isSubmitted={false}
        needsResponse={true}
      />
    </LoadableBlock>
  </Card>
  <Card
    title={
      <Loadable
        value="Check Returned Dispute"
      />
    }
  >
    <LoadableBlock
      numLines={4}
    >
      <Paragraphs />
    </LoadableBlock>
    <LoadableBlock
      numLines={6}
    >
      <Paragraphs />
    </LoadableBlock>
    <LoadableBlock
      numLines={6}
    >
      <Paragraphs />
      <Actions
        id="dp_asdfghjkl"
        isSubmitted={false}
        needsResponse={true}
      />
    </LoadableBlock>
  </Card>
</Page>
`;

exports[`Dispute details screen renders correctly for credit_not_processed dispute 1`] = `
<Page
  className="wcpay-dispute-details"
  isNarrow={true}
>
  <Card
    title={
      <Loadable
        value="Dispute Overview"
      />
    }
  >
    <Info
      dispute={
        Object {
          "amount": 1000,
          "created": 1572590800,
          "evidence_details": Object {
            "due_by": 1573199200,
          },
          "id": "dp_asdfghjkl",
          "order": Object {
            "number": "1",
            "url": "http://test.local/order/1",
          },
          "reason": "credit_not_processed",
          "status": "needs_response",
        }
      }
    />
    <LoadableBlock
      numLines={4}
    >
      <Paragraphs>
        If you believe the dispute is invalid, you can challenge it by submitting the appropriate evidence using the response forms on the next the next screen.
        If your customer was not refunded appropriately, you will need to accept the dispute, or resolve the issue with your customer. The credit card networks place liability for accepting disputed payments with you, the business.
      </Paragraphs>
    </LoadableBlock>
    <LoadableBlock
      numLines={6}
    >
      <Actions
        id="dp_asdfghjkl"
        isSubmitted={false}
        needsResponse={true}
      />
    </LoadableBlock>
  </Card>
  <Card
    title={
      <Loadable
        value="Credit Not Processed Dispute"
      />
    }
  >
    <LoadableBlock
      numLines={4}
    >
      <Paragraphs>
        The customer claims that the purchased product was returned or the transaction was otherwise canceled, but you have not yet provided a refund or credit.
      </Paragraphs>
    </LoadableBlock>
    <LoadableBlock
      numLines={6}
    >
      <h3>
         
        Required to overturn dispute
         
      </h3>
      <Paragraphs>
        Demonstrate that you have refunded your customer through other means or that your customer is not entitled to a refund. You cannot issue a refund while a payment is being disputed. If you believe that your customer was entitled a refund that you did not provide, you can accept the dispute.
      </Paragraphs>
    </LoadableBlock>
    <LoadableBlock
      numLines={6}
    >
      <h3>
        How to respond
      </h3>
      <Paragraphs>
        You should first get in touch with your customer. If you understand what their complaint is, there is a chance for you to explain the misunderstanding or to make it right. If you’re able to resolve the issue with your customer, you can ask that they withdraw the dispute.
        If the cardholder agrees to withdraw the dispute, you should still submit evidence for the dispute using the forms on the next screen. In addition to the following evidence, your submission should include correspondence with the cardholder saying they would withdraw the dispute and a written statement from their card issuer confirming that the dispute has been withdrawn.
      </Paragraphs>
      <Actions
        id="dp_asdfghjkl"
        isSubmitted={false}
        needsResponse={true}
      />
    </LoadableBlock>
  </Card>
</Page>
`;

exports[`Dispute details screen renders correctly for customer_initiated dispute 1`] = `
<Page
  className="wcpay-dispute-details"
  isNarrow={true}
>
  <Card
    title={
      <Loadable
        value="Dispute Overview"
      />
    }
  >
    <Info
      dispute={
        Object {
          "amount": 1000,
          "created": 1572590800,
          "evidence_details": Object {
            "due_by": 1573199200,
          },
          "id": "dp_asdfghjkl",
          "order": Object {
            "number": "1",
            "url": "http://test.local/order/1",
          },
          "reason": "customer_initiated",
          "status": "needs_response",
        }
      }
    />
    <LoadableBlock
      numLines={4}
    >
      <Paragraphs />
    </LoadableBlock>
    <LoadableBlock
      numLines={6}
    >
      <Actions
        id="dp_asdfghjkl"
        isSubmitted={false}
        needsResponse={true}
      />
    </LoadableBlock>
  </Card>
  <Card
    title={
      <Loadable
        value="Customer Initiated Dispute"
      />
    }
  >
    <LoadableBlock
      numLines={4}
    >
      <Paragraphs />
    </LoadableBlock>
    <LoadableBlock
      numLines={6}
    >
      <Paragraphs />
    </LoadableBlock>
    <LoadableBlock
      numLines={6}
    >
      <Paragraphs />
      <Actions
        id="dp_asdfghjkl"
        isSubmitted={false}
        needsResponse={true}
      />
    </LoadableBlock>
  </Card>
</Page>
`;

exports[`Dispute details screen renders correctly for debit_not_authorized dispute 1`] = `
<Page
  className="wcpay-dispute-details"
  isNarrow={true}
>
  <Card
    title={
      <Loadable
        value="Dispute Overview"
      />
    }
  >
    <Info
      dispute={
        Object {
          "amount": 1000,
          "created": 1572590800,
          "evidence_details": Object {
            "due_by": 1573199200,
          },
          "id": "dp_asdfghjkl",
          "order": Object {
            "number": "1",
            "url": "http://test.local/order/1",
          },
          "reason": "debit_not_authorized",
          "status": "needs_response",
        }
      }
    />
    <LoadableBlock
      numLines={4}
    >
      <Paragraphs />
    </LoadableBlock>
    <LoadableBlock
      numLines={6}
    >
      <Actions
        id="dp_asdfghjkl"
        isSubmitted={false}
        needsResponse={true}
      />
    </LoadableBlock>
  </Card>
  <Card
    title={
      <Loadable
        value="Debit Not Authorized Dispute"
      />
    }
  >
    <LoadableBlock
      numLines={4}
    >
      <Paragraphs />
    </LoadableBlock>
    <LoadableBlock
      numLines={6}
    >
      <Paragraphs />
    </LoadableBlock>
    <LoadableBlock
      numLines={6}
    >
      <Paragraphs />
      <Actions
        id="dp_asdfghjkl"
        isSubmitted={false}
        needsResponse={true}
      />
    </LoadableBlock>
  </Card>
</Page>
`;

exports[`Dispute details screen renders correctly for duplicate dispute 1`] = `
<Page
  className="wcpay-dispute-details"
  isNarrow={true}
>
  <Card
    title={
      <Loadable
        value="Dispute Overview"
      />
    }
  >
    <Info
      dispute={
        Object {
          "amount": 1000,
          "created": 1572590800,
          "evidence_details": Object {
            "due_by": 1573199200,
          },
          "id": "dp_asdfghjkl",
          "order": Object {
            "number": "1",
            "url": "http://test.local/order/1",
          },
          "reason": "duplicate",
          "status": "needs_response",
        }
      }
    />
    <LoadableBlock
      numLines={4}
    >
      <Paragraphs>
        If you believe the dispute is invalid, you can challenge it by submitting the appropriate evidence using the response forms on the next the next screen.
        If there were duplicate payments, you should accept the dispute. You cannot issue a refund while a payment is being disputed. The credit card networks place liability for accepting disputed payments with you, the business.
      </Paragraphs>
    </LoadableBlock>
    <LoadableBlock
      numLines={6}
    >
      <Actions
        id="dp_asdfghjkl"
        isSubmitted={false}
        needsResponse={true}
      />
    </LoadableBlock>
  </Card>
  <Card
    title={
      <Loadable
        value="Duplicate Dispute"
      />
    }
  >
    <LoadableBlock
      numLines={4}
    >
      <Paragraphs>
        The customer claims they were charged multiple times for the same product or service.
      </Paragraphs>
    </LoadableBlock>
    <LoadableBlock
      numLines={6}
    >
      <h3>
         
        Required to overturn dispute
         
      </h3>
      <Paragraphs>
        Demonstrate that each payment was for a separate product or service.
      </Paragraphs>
    </LoadableBlock>
    <LoadableBlock
      numLines={6}
    >
      <h3>
        How to respond
      </h3>
      <Paragraphs>
        Determine if your customer was incorrectly charged multiple times.
        If they were not, collect any and all information documenting that each payment was made separately, such as copies of receipts. If the receipts don’t include the items purchased, be sure to include an itemized list. Each receipt should clearly indicate that the payments are for separate purchases of items or services. If you’ve been able to get in touch with the customer you should be sure to address any concerns they had in your evidence.
        If there have been two or more separate payments, you should get in touch with your customer. If you understand what their complaint is, there is a chance for you to explain the misunderstanding or to make it right. If you’re able to resolve the issue with your customer, you can ask that they withdraw the dispute.
        Even if your customer agrees to withdraw the dispute, you must still submit appropriate evidence using the forms on the next screen. Simply saying that your customer is going to withdraw the dispute is not sufficient evidence.
      </Paragraphs>
      <Actions
        id="dp_asdfghjkl"
        isSubmitted={false}
        needsResponse={true}
      />
    </LoadableBlock>
  </Card>
</Page>
`;

exports[`Dispute details screen renders correctly for fraudulent dispute 1`] = `
<Page
  className="wcpay-dispute-details"
  isNarrow={true}
>
  <Card
    title={
      <Loadable
        value="Dispute Overview"
      />
    }
  >
    <Info
      dispute={
        Object {
          "amount": 1000,
          "created": 1572590800,
          "evidence_details": Object {
            "due_by": 1573199200,
          },
          "id": "dp_asdfghjkl",
          "order": Object {
            "number": "1",
            "url": "http://test.local/order/1",
          },
          "reason": "fraudulent",
          "status": "needs_response",
        }
      }
    />
    <LoadableBlock
      numLines={4}
    >
      <Paragraphs>
        If you believe the dispute is invalid, you can challenge it by submitting the appropriate evidence using the response forms on the next the next screen.
        If you believe the payment was actually made using a stolen credit card, you will need to accept the dispute. The credit card networks place liability for accepting fraudulent payments with you, the business.
      </Paragraphs>
    </LoadableBlock>
    <LoadableBlock
      numLines={6}
    >
      <Actions
        id="dp_asdfghjkl"
        isSubmitted={false}
        needsResponse={true}
      />
    </LoadableBlock>
  </Card>
  <Card
    title={
      <Loadable
        value="Fraudulent Dispute"
      />
    }
  >
    <LoadableBlock
      numLines={4}
    >
      <Paragraphs>
        This is the most common reason for a dispute, and happens when a cardholder claims that they didn’t authorize the payment. This can happen if the card was lost or stolen and used to make a fraudulent purchase. It can also happen if the cardholder doesn’t recognize the payment as it appears on the billing statement from their card issuer.
      </Paragraphs>
    </LoadableBlock>
    <LoadableBlock
      numLines={6}
    >
      <h3>
         
        Required to overturn dispute
         
      </h3>
      <Paragraphs>
        Provide adequate payment and order details so that a legitimate customer recognizes it, or proves to the card issuer that their cardholder authorized the transaction.
      </Paragraphs>
    </LoadableBlock>
    <LoadableBlock
      numLines={6}
    >
      <h3>
        How to respond
      </h3>
      <Paragraphs>
        Try to get in touch with your customer. Sometimes people forget about payments they make or don’t recognize the way they appear on their card statement. If this is the case, ask them to contact their card issuer and let them know they no longer dispute the transaction.
        Even if your customer agrees to withdraw the dispute, you must still submit appropriate evidence using the forms on the next screen. Simply saying that your customer is going to withdraw the dispute is not sufficient evidence.
        It may be more efficient—and provide a better customer experience—to accept an accidental dispute and charge the customer again, if appropriate. Even when a dispute is withdrawn, it usually takes approximately 75 days to be finalized. Remember, it doesn’t matter to the card networks whether you win or lose a dispute; what matters is how many disputes a business receives, regardless of how many disputes are won.
      </Paragraphs>
      <Actions
        id="dp_asdfghjkl"
        isSubmitted={false}
        needsResponse={true}
      />
    </LoadableBlock>
  </Card>
</Page>
`;

exports[`Dispute details screen renders correctly for general dispute 1`] = `
<Page
  className="wcpay-dispute-details"
  isNarrow={true}
>
  <Card
    title={
      <Loadable
        value="Dispute Overview"
      />
    }
  >
    <Info
      dispute={
        Object {
          "amount": 1000,
          "created": 1572590800,
          "evidence_details": Object {
            "due_by": 1573199200,
          },
          "id": "dp_asdfghjkl",
          "order": Object {
            "number": "1",
            "url": "http://test.local/order/1",
          },
          "reason": "general",
          "status": "needs_response",
        }
      }
    />
    <LoadableBlock
      numLines={4}
    >
      <Paragraphs>
        If you believe the dispute is invalid, you can challenge it by submitting the appropriate evidence using the response forms on the next the next screen.
      </Paragraphs>
    </LoadableBlock>
    <LoadableBlock
      numLines={6}
    >
      <Actions
        id="dp_asdfghjkl"
        isSubmitted={false}
        needsResponse={true}
      />
    </LoadableBlock>
  </Card>
  <Card
    title={
      <Loadable
        value="General Dispute"
      />
    }
  >
    <LoadableBlock
      numLines={4}
    >
      <Paragraphs>
        This is an uncategorized dispute, so you should contact the customer for additional details to find out why the payment was disputed.
      </Paragraphs>
    </LoadableBlock>
    <LoadableBlock
      numLines={6}
    >
      <Paragraphs />
    </LoadableBlock>
    <LoadableBlock
      numLines={6}
    >
      <Paragraphs />
      <Actions
        id="dp_asdfghjkl"
        isSubmitted={false}
        needsResponse={true}
      />
    </LoadableBlock>
  </Card>
</Page>
`;

exports[`Dispute details screen renders correctly for incorrect_account_details dispute 1`] = `
<Page
  className="wcpay-dispute-details"
  isNarrow={true}
>
  <Card
    title={
      <Loadable
        value="Dispute Overview"
      />
    }
  >
    <Info
      dispute={
        Object {
          "amount": 1000,
          "created": 1572590800,
          "evidence_details": Object {
            "due_by": 1573199200,
          },
          "id": "dp_asdfghjkl",
          "order": Object {
            "number": "1",
            "url": "http://test.local/order/1",
          },
          "reason": "incorrect_account_details",
          "status": "needs_response",
        }
      }
    />
    <LoadableBlock
      numLines={4}
    >
      <Paragraphs />
    </LoadableBlock>
    <LoadableBlock
      numLines={6}
    >
      <Actions
        id="dp_asdfghjkl"
        isSubmitted={false}
        needsResponse={true}
      />
    </LoadableBlock>
  </Card>
  <Card
    title={
      <Loadable
        value="Incorrect Account Details Dispute"
      />
    }
  >
    <LoadableBlock
      numLines={4}
    >
      <Paragraphs />
    </LoadableBlock>
    <LoadableBlock
      numLines={6}
    >
      <Paragraphs />
    </LoadableBlock>
    <LoadableBlock
      numLines={6}
    >
      <Paragraphs />
      <Actions
        id="dp_asdfghjkl"
        isSubmitted={false}
        needsResponse={true}
      />
    </LoadableBlock>
  </Card>
</Page>
`;

exports[`Dispute details screen renders correctly for insufficient_funds dispute 1`] = `
<Page
  className="wcpay-dispute-details"
  isNarrow={true}
>
  <Card
    title={
      <Loadable
        value="Dispute Overview"
      />
    }
  >
    <Info
      dispute={
        Object {
          "amount": 1000,
          "created": 1572590800,
          "evidence_details": Object {
            "due_by": 1573199200,
          },
          "id": "dp_asdfghjkl",
          "order": Object {
            "number": "1",
            "url": "http://test.local/order/1",
          },
          "reason": "insufficient_funds",
          "status": "needs_response",
        }
      }
    />
    <LoadableBlock
      numLines={4}
    >
      <Paragraphs />
    </LoadableBlock>
    <LoadableBlock
      numLines={6}
    >
      <Actions
        id="dp_asdfghjkl"
        isSubmitted={false}
        needsResponse={true}
      />
    </LoadableBlock>
  </Card>
  <Card
    title={
      <Loadable
        value="Insufficient Funds Dispute"
      />
    }
  >
    <LoadableBlock
      numLines={4}
    >
      <Paragraphs />
    </LoadableBlock>
    <LoadableBlock
      numLines={6}
    >
      <Paragraphs />
    </LoadableBlock>
    <LoadableBlock
      numLines={6}
    >
      <Paragraphs />
      <Actions
        id="dp_asdfghjkl"
        isSubmitted={false}
        needsResponse={true}
      />
    </LoadableBlock>
  </Card>
</Page>
`;

exports[`Dispute details screen renders correctly for product_not_received dispute 1`] = `
<Page
  className="wcpay-dispute-details"
  isNarrow={true}
>
  <Card
    title={
      <Loadable
        value="Dispute Overview"
      />
    }
  >
    <Info
      dispute={
        Object {
          "amount": 1000,
          "created": 1572590800,
          "evidence_details": Object {
            "due_by": 1573199200,
          },
          "id": "dp_asdfghjkl",
          "order": Object {
            "number": "1",
            "url": "http://test.local/order/1",
          },
          "reason": "product_not_received",
          "status": "needs_response",
        }
      }
    />
    <LoadableBlock
      numLines={4}
    >
      <Paragraphs>
        If you believe the dispute is invalid, you can challenge it by submitting the appropriate evidence using the response forms on the next the next screen.
        If you can not prove the customer received their product or service, you should accept the dispute. You cannot issue a refund while a payment is being disputed. The credit card networks place liability for accepting disputed payments with you, the business.
      </Paragraphs>
    </LoadableBlock>
    <LoadableBlock
      numLines={6}
    >
      <Actions
        id="dp_asdfghjkl"
        isSubmitted={false}
        needsResponse={true}
      />
    </LoadableBlock>
  </Card>
  <Card
    title={
      <Loadable
        value="Product Not Received Dispute"
      />
    }
  >
    <LoadableBlock
      numLines={4}
    >
      <Paragraphs>
        The customer claims they did not receive the products or services purchased.
      </Paragraphs>
    </LoadableBlock>
    <LoadableBlock
      numLines={6}
    >
      <h3>
         
        Required to overturn dispute
         
      </h3>
      <Paragraphs>
        Prove that the customer received a physical product or offline service, or made use of a digital product or online service. This must have occurred prior to the date the dispute was initiated.
      </Paragraphs>
    </LoadableBlock>
    <LoadableBlock
      numLines={6}
    >
      <h3>
        How to respond
      </h3>
      <Paragraphs>
        First, get in touch with your customer. Understanding why they filed the dispute will be important for helping make sure your customer gets the product and will give you critical information to prevent this from happening to others.
        Even if your customer agrees to withdraw the dispute, you must still submit appropriate evidence using the forms on the next screen. Simply saying that your customer is going to withdraw the dispute is not sufficient evidence.
      </Paragraphs>
      <Actions
        id="dp_asdfghjkl"
        isSubmitted={false}
        needsResponse={true}
      />
    </LoadableBlock>
  </Card>
</Page>
`;

exports[`Dispute details screen renders correctly for product_unacceptable dispute 1`] = `
<Page
  className="wcpay-dispute-details"
  isNarrow={true}
>
  <Card
    title={
      <Loadable
        value="Dispute Overview"
      />
    }
  >
    <Info
      dispute={
        Object {
          "amount": 1000,
          "created": 1572590800,
          "evidence_details": Object {
            "due_by": 1573199200,
          },
          "id": "dp_asdfghjkl",
          "order": Object {
            "number": "1",
            "url": "http://test.local/order/1",
          },
          "reason": "product_unacceptable",
          "status": "needs_response",
        }
      }
    />
    <LoadableBlock
      numLines={4}
    >
      <Paragraphs>
        If you believe the dispute is invalid, you can challenge it by submitting the appropriate evidence using the response forms on the next the next screen.
        If you can not prove the customer received their product or service as described, you should accept the dispute. You cannot issue a refund while a payment is being disputed. The credit card networks place liability for accepting disputed payments with you, the business.
      </Paragraphs>
    </LoadableBlock>
    <LoadableBlock
      numLines={6}
    >
      <Actions
        id="dp_asdfghjkl"
        isSubmitted={false}
        needsResponse={true}
      />
    </LoadableBlock>
  </Card>
  <Card
    title={
      <Loadable
        value="Product Unacceptable Dispute"
      />
    }
  >
    <LoadableBlock
      numLines={4}
    >
      <Paragraphs>
        The product or service was received but was defective, damaged, or not as described.
      </Paragraphs>
    </LoadableBlock>
    <LoadableBlock
      numLines={6}
    >
      <h3>
         
        Required to overturn dispute
         
      </h3>
      <Paragraphs>
        Demonstrate that the product or service was delivered as described at the time of purchase.
      </Paragraphs>
    </LoadableBlock>
    <LoadableBlock
      numLines={6}
    >
      <h3>
        How to respond
      </h3>
      <Paragraphs>
        If the product or service is as described, provide specific information (invoice, contract, etc.) to refute the cardholder’s claims. Quality disputes are where the customer does not agree with the condition of merchandise or service received (e.g., a car repair situation or quality of a hotel room). There may be instances where you will need to obtain a neutral third-party opinion to help corroborate your claim against the cardholder. Provide as much specific information and documentation as possible to refute the cardholder’s claims. It is recommended that you address each point that the cardholder has made.
        If the customer has not yet returned the product or canceled the service, provide specific information to that effect. You should double-check your incoming shipping records to verify that you have not received a return before you respond. If you have processed a credit or reversal for this transaction, provide evidence of this which includes the amount and date processed.
        For products that have been repaired or replaced, provide evidence that the cardholder agreed to a repair or replacement, it has been received by the customer, and the repair or replacement has not since been disputed.
        If your customer made no attempt to return the product or cancel the service, or if you provided a replacement product or service, make sure to note that as well.
        If the customer withdraws their dispute you should still submit evidence using the forms on the next screen. Be sure to provide a letter or email from the cardholder stating that they are no longer in dispute.
      </Paragraphs>
      <Actions
        id="dp_asdfghjkl"
        isSubmitted={false}
        needsResponse={true}
      />
    </LoadableBlock>
  </Card>
</Page>
`;

exports[`Dispute details screen renders correctly for subscription_canceled dispute 1`] = `
<Page
  className="wcpay-dispute-details"
  isNarrow={true}
>
  <Card
    title={
      <Loadable
        value="Dispute Overview"
      />
    }
  >
    <Info
      dispute={
        Object {
          "amount": 1000,
          "created": 1572590800,
          "evidence_details": Object {
            "due_by": 1573199200,
          },
          "id": "dp_asdfghjkl",
          "order": Object {
            "number": "1",
            "url": "http://test.local/order/1",
          },
          "reason": "subscription_canceled",
          "status": "needs_response",
        }
      }
    />
    <LoadableBlock
      numLines={4}
    >
      <Paragraphs>
        If you believe the dispute is invalid, you can challenge it by submitting the appropriate evidence using the response forms on the next the next screen.
        If you can not prove the customer’s subscription was canceled, and or they did not follow your cancelation policy, you should accept the dispute. You cannot issue a refund while a payment is being disputed. The credit card networks place liability for accepting disputed payments with you, the business.
      </Paragraphs>
    </LoadableBlock>
    <LoadableBlock
      numLines={6}
    >
      <Actions
        id="dp_asdfghjkl"
        isSubmitted={false}
        needsResponse={true}
      />
    </LoadableBlock>
  </Card>
  <Card
    title={
      <Loadable
        value="Subscription Canceled Dispute"
      />
    }
  >
    <LoadableBlock
      numLines={4}
    >
      <Paragraphs>
        The customer claims that you continued to charge them after a subscription was canceled.
      </Paragraphs>
    </LoadableBlock>
    <LoadableBlock
      numLines={6}
    >
      <h3>
         
        Required to overturn dispute
         
      </h3>
      <Paragraphs>
        Prove that the subscription was still active and that the customer was aware of, and did not follow, your cancellation procedure.
      </Paragraphs>
    </LoadableBlock>
    <LoadableBlock
      numLines={6}
    >
      <h3>
        How to respond
      </h3>
      <Paragraphs>
        First, get in touch with your customer. If you understand what they believe happened, there is a chance for you to explain the misunderstanding or to make it right. 
        Even if your customer agrees to withdraw the dispute, you must still submit appropriate evidence using the forms on the next screen. Simply saying that your customer is going to withdraw the dispute is not sufficient evidence.
        Otherwise, use the forms on the next screen to submit evidence that the subscription was still active and that the customer was aware of, and did not follow, your cancellation procedure.
      </Paragraphs>
      <Actions
        id="dp_asdfghjkl"
        isSubmitted={false}
        needsResponse={true}
      />
    </LoadableBlock>
  </Card>
</Page>
`;

exports[`Dispute details screen renders correctly for unrecognized dispute 1`] = `
<Page
  className="wcpay-dispute-details"
  isNarrow={true}
>
  <Card
    title={
      <Loadable
        value="Dispute Overview"
      />
    }
  >
    <Info
      dispute={
        Object {
          "amount": 1000,
          "created": 1572590800,
          "evidence_details": Object {
            "due_by": 1573199200,
          },
          "id": "dp_asdfghjkl",
          "order": Object {
            "number": "1",
            "url": "http://test.local/order/1",
          },
          "reason": "unrecognized",
          "status": "needs_response",
        }
      }
    />
    <LoadableBlock
      numLines={4}
    >
      <Paragraphs>
        If you believe the dispute is invalid, you can challenge it by submitting the appropriate evidence using the response forms on the next the next screen.
        If you can not prove the customer’s subscription was canceled, and or they did not follow your cancelation policy, you should accept the dispute. You cannot issue a refund while a payment is being disputed. The credit card networks place liability for accepting disputed payments with you, the business.
      </Paragraphs>
    </LoadableBlock>
    <LoadableBlock
      numLines={6}
    >
      <Actions
        id="dp_asdfghjkl"
        isSubmitted={false}
        needsResponse={true}
      />
    </LoadableBlock>
  </Card>
  <Card
    title={
      <Loadable
        value="Unrecognized Dispute"
      />
    }
  >
    <LoadableBlock
      numLines={4}
    >
      <Paragraphs>
        The customer doesn’t recognize the payment appearing on their card statement.
      </Paragraphs>
    </LoadableBlock>
    <LoadableBlock
      numLines={6}
    >
      <h3>
         
        Required to overturn dispute
         
      </h3>
      <Paragraphs>
        As with fraudulent disputes, get your customer to withdraw the dispute by helping them identify the payment. Otherwise challenge the dispute with appropriate evidence that proves the purchase was legitimate. 
      </Paragraphs>
    </LoadableBlock>
    <LoadableBlock
      numLines={6}
    >
      <h3>
        How to respond
      </h3>
      <Paragraphs>
        First, try to get in touch with your customer. Sometimes people forget about payments they make or don’t recognize the way they appear on their card statement. If this is the case, ask them to contact their card issuer and let them know they no longer dispute the transaction. Even if your customer agrees to withdraw the dispute, you must still submit appropriate evidence. Simply saying that your customer is going to withdraw the dispute is not sufficient evidence.
        It may be more efficient—and provide a better customer experience—to accept an accidental dispute and charge the customer again, if appropriate. Even when a dispute is withdrawn, it usually takes approximately 75 days to be finalized. Remember, it doesn’t matter to the card networks whether you win or lose a dispute; what matters is how many disputes a business receives, regardless of how many disputes are won.
      </Paragraphs>
      <Actions
        id="dp_asdfghjkl"
        isSubmitted={false}
        needsResponse={true}
      />
    </LoadableBlock>
  </Card>
</Page>
`;
